; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/extr_al_hal_udma_config.c_al_udma_s2m_full_line_write_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/extr_al_hal_udma_config.c_al_udma_s2m_full_line_write_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.al_udma = type { %struct.TYPE_6__*, i32 }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@AL_TRUE = common dso_local global i64 0, align 8
@UDMA_S2M_WR_DATA_CFG_2_FULL_LINE_MODE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"udma [%s]: full line write enabled\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @al_udma_s2m_full_line_write_set(%struct.al_udma* %0, i64 %1) #0 {
  %3 = alloca %struct.al_udma*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.al_udma* %0, %struct.al_udma** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @AL_TRUE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load i32, i32* @UDMA_S2M_WR_DATA_CFG_2_FULL_LINE_MODE, align 4
  store i32 %10, i32* %5, align 4
  %11 = load %struct.al_udma*, %struct.al_udma** %3, align 8
  %12 = getelementptr inbounds %struct.al_udma, %struct.al_udma* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @al_info(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %9, %2
  %16 = load %struct.al_udma*, %struct.al_udma** %3, align 8
  %17 = getelementptr inbounds %struct.al_udma, %struct.al_udma* %16, i32 0, i32 0
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* @UDMA_S2M_WR_DATA_CFG_2_FULL_LINE_MODE, align 4
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @al_reg_write32_masked(i32* %21, i32 %22, i32 %23)
  ret i32 0
}

declare dso_local i32 @al_info(i8*, i32) #1

declare dso_local i32 @al_reg_write32_masked(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
